--- a/src/global.css
+++ b/src/global.css
@@ -11,9 +11,23 @@
 
 .first-section-container {
     display: flex;
-
+    align-items: center;
+    justify-content: space-between;
 }
+
+
 
 body {
     font-family: 'Poppins', sans-serif;
+}
+
+@media only screen and (max-width: 768px) {
+    .first-section-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .leaflet-container {
+        width: 100%;
+        height: 25vh;
+    }
 }
